[package]
name = "rataudio-meter"
description = "A ratatui widget for displaying audio meter data in the terminal"
version = "0.1.0"
edition = "2021"
authors = ["Kasper Nyhus <kaspernyhuskaae@gmail.com>"]
keywords = ["tui", "ratatui", "widget", "audio-meter"]
repository = "https://github.com/kaspernyhus/rataudio-meter"
readme = "README.md"
license = "MIT"

[dependencies]
lazy_static = "1.5.0"
ratatui = "0.29.0"

[dev-dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
rand = "0.9.1"
ratatui = "0.29.0"
